assets/css/style.css
:root {
    --triangle: blue;
}

body {
    font-family: Georgia, 'Times New Roman', Times, serif;
    height:100vh;
    width:100vw;
    display: flex;
    overflow-x:hidden;
}

header {
    background-color: #908DFF;
    width: 25%;
    height: 100%;
    position: fixed;
    text-align: center;
}

a:link, a:visited, a:active, a {
    color: inherit;
    text-decoration: none;
}

header div, nav {
    position: relative;
    top: 90px;
}

header img {
    height: 152px;
    width: 152px;
    border-radius: 50%;
    margin-bottom: 5px;
}
header h1 {
    margin: 10px;
    font-size: 1.8em;
    font-weight: bold;
}

header nav {
    margin-top: 70px;
}

header nav li {
    margin: 20px 0px 20px 0px;
    padding: 5px 0px 5px 0px;
    font-size: 1.4em;
}

/*
header .triangle1 {
    float: right;
    position:fixed;
    top: 402px;
    left: 24.2%;
    z-index: 1;
    width: 0; 
    height: 0; 
    border-top: 14px solid transparent;
    border-bottom: 14px solid transparent; 
    border-right:14px solid var(--triangle);  
}

header .triangle2 {
    float: right;
    position:fixed;
    top: 454px;
    left: 24.2%;
    z-index: 1;
    width: 0; 
    height: 0; 
    border-top: 14px solid transparent;
    border-bottom: 14px solid transparent; 
    border-right:14px solid var(--triangle);  
}

header .triangle3 {
    float: right;
    position:fixed;
    top: 506px;
    left: 24.2%;
    z-index: 1;
    width: 0; 
    height: 0; 
    border-top: 14px solid transparent;
    border-bottom: 14px solid transparent; 
    border-right:14px solid var(--triangle);
} */

header .social-media {
    top: 200px;
    font-size: 20px;
}
header .social-media .fa {
    margin: 10px;
    margin-top: 15px;
}
aside {
    min-width: 26%;
    height:100%;
}

.page {
    display: flex;
    flex-direction: column;
}

